@@ -1,3 +1,6 @@
+2011-01-16 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
+	* src/intel_hex.c: Apply fix suggested by bug 3016469.
+
 2010-05-02 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
 	* AUTHORS, src/commands.c: Removed confusing & useless code
 	  that Darren Gibbs found.
